<resources>
    <string name="app_name">List of my restaurants</string>
    <string name="list">List</string>
    <string name="save">Save</string>
    <string name="take_picture">Take picture</string>
    <string name="restaurant">Restaurant name</string>
    <string name="address">Address</string>
    <string name="title">My list of restaurants</string>
    <string name="save_restaurant">Restaurant saved!</string>
    <string name="enter_name">Enter restaurant name</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_picture">Please take picture</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_remove">Are you sure you want to delete?</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="add_restaurant">Add restaurant</string>
    <string name="back">Back</string>
    <string name="permission_msg">You don\'t have permissions to take picture</string>
    <string name="restaurant_deleted">The restaurant removed from the list!</string>
</resources>
