<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/main_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:textColor="@color/lightBlue"
        android:text="@string/add_restaurant"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center">
    <Button
        android:id="@+id/take_picture_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:text="@string/take_picture"/>

    <ImageView
        android:id="@+id/restaurant_picture_image"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:rotation="90"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/restaurant_name_et"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:hint="@string/restaurant"
        android:inputType="text"/>

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:hint="@string/phone_number"
        android:inputType="phone"/>


    <EditText
        android:id="@+id/address_et"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:hint="@string/address"
        android:inputType="text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom">
    <Button
        android:id="@+id/save_btn"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:visibility="invisible"
        android:layout_margin="10dp"
        android:text="@string/save"/>

    <Button
        android:id="@+id/back_btn"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:visibility="invisible"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/back"/>
    </LinearLayout>
</LinearLayout>