<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="120dp"
    android:background="@color/blue"
    android:padding="5dp"
    android:layout_gravity="center"
    app:layout_constraintCircleRadius="@dimen/cardview_compat_inset_shadow">
    <TextView
        android:id="@+id/txt_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="X"
        android:textColor="@color/veryDarkBlue"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circle_quit_background"/>
    <TextView
        android:id="@+id/confirm_removeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/veryDarkBlue"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/confirm_remove"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <Button
            android:id="@+id/no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="left"
            android:background="@drawable/btn_shape"
            android:textColor="@color/veryDarkBlue"
            android:text="@string/no"/>

        <Button
            android:id="@+id/yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="right"
            android:background="@drawable/btn_shape"
            android:textColor="@color/veryDarkBlue"
            android:text="@string/yes"/>

    </LinearLayout>

</LinearLayout>