<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    android:elevation="8dp"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/lightBlue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/restaurant_pic_list"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:rotation="90" />

        <TableLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/restaurant_name_list"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_margin="2dp"
                android:gravity="center"
                android:background="#000"
                android:text="@string/restaurant"
                android:textColor="#FFF"/>

            <TextView
                android:id="@+id/name_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/veryDarkBlue"
                android:textColor="#FFF"
                android:textSize="10sp"/>
        </TableLayout>

        <TableLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp">
            <TextView
                android:id="@+id/restaurant_address_list"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_margin="2dp"
                android:gravity="center"
                android:background="#000"
                android:text="@string/address"
                android:textColor="#FFF"/>
            <TextView
                android:id="@+id/address_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/veryDarkBlue"
                android:textColor="#FFF"
                android:textSize="10sp"/>
        </TableLayout>

        <TableLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="100dp">
            <TextView
                android:id="@+id/phone_number_list"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_margin="2dp"
                android:background="#000"
                android:gravity="center"
                android:text="@string/phone_number"
                android:textColor="#FFF"/>
            <TextView
                android:id="@+id/food_type_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/veryDarkBlue"
                android:textColor="#FFF"
                android:textSize="10sp"/>
        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>